# rebar

./: .gitignore  Cargo.toml  LICENSE  README.md
rg_app/: Cargo.toml
rg_app/src/: main.rs
rg_core/: Cargo.toml
rg_core/src/: layout.rs  leiden.rs  lib.rs  quadtree.rs
rg_render/: Cargo.toml
rg_render/src/: camera.rs  lib.rs  renderer.rs  shader.wgsl
