[package]
name = "rg_app"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
glam = "0.29"
rand = "0.8"
egui = "0.29"
egui-winit = "0.29"
egui_plot = "0.29"
egui-wgpu = "0.29"
wgpu = "22.0"
crossbeam = "0.8.4"

[dependencies.rg_core]
path = "../rg_core"

[dependencies.rg_render]
path = "../rg_render"
