[package]
name = "rg_render"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.0"
winit = "0.30"
glam = { version = "0.29", features = ["bytemuck"] }
log = "0.4"
pollster = "0.4"
egui = "0.29"
egui-wgpu = "0.29"
bytemuck = { version = "1.19", features = ["derive"] }

[dependencies.rg_core]
path = "../rg_core"
